# go-bazel

./: .gitignore  README.md  WORKSPACE
cmd/: BUILD.bazel  main.go
random/go-path/: BUILD.bazel  types.go
src/bazel-corp/: go.mod
src/bazel-corp/lib/: BUILD.bazel  funcs.go
